--- a/SegmenTron/configs/0018_deeplabv3p_shufflenetv2p.yaml
+++ b/SegmenTron/configs/0018_deeplabv3p_shufflenetv2p.yaml
@@ -5,22 +5,21 @@ DATASET:
 TRAIN:
     EPOCHS: 60
     BATCH_SIZE: 8
-    CROP_SIZE: 512
-    BASE_SIZE: 512
-    SUPERVISE_SIZE: 512
-    BACKBONE_PRETRAINED_PATH: "pretrain/resnet50-19c8e357.pth"
+    CROP_SIZE: 256
+    BASE_SIZE: 256
+    SUPERVISE_SIZE: 256
+    BACKBONE_PRETRAINED_PATH: "pretrain/ShuffleNetV2+.Large.pth.tar"
 TEST:
-    BATCH_SIZE: 4
+    BATCH_SIZE: 8
     SCALES: [0.75, 1.0, 1.25]
 
 SOLVER:
-    LR: 0.04
+    LR: 0.01
     OPTIMIZER: "SGD"
-    USE_FP16: True
     AUX: True
 
 MODEL:
-    MODEL_NAME: "BiSeNet"
-    BACKBONE: "ibn_resnet50"
+    MODEL_NAME: "DeepLabV3_Plus_V2"
+    BACKBONE: "ibn_shufflenetv2_plus"
     OUTPUT_STRIDE: 8
 
