--- a/SegmenTron/configs/0039_dunet_resnext101.yaml
+++ b/SegmenTron/configs/0039_dunet_resnext101.yaml
@@ -1,5 +1,6 @@
 DATASET:
-    NAME: "datasetAC"
+#    NAME: "datasetAC"
+    NAME: "datasetA"
     MEAN: [0.485, 0.456, 0.406]
     STD: [0.229, 0.224, 0.225]
 TRAIN:
@@ -11,7 +12,8 @@ TRAIN:
     BACKBONE_PRETRAINED_PATH: "pretrain/resnext101_32x8d-8ba56ff5.pth"
 
 TEST:
-    BATCH_SIZE: 8
+    BATCH_SIZE: 16
+    TEST_MODEL_PATH: "runs/checkpoints/0039_dunet_resnext101/best_model.pth"
     SCALES: [0.75, 1.0, 1.25]
 
 SOLVER:
