--- a/SegmenTron/configs/0059_deeplabv3p_ofaflops595m.yaml
+++ b/SegmenTron/configs/0059_deeplabv3p_ofaflops595m.yaml
@@ -3,12 +3,12 @@ DATASET:
     MEAN: [0.485, 0.456, 0.406]
     STD: [0.229, 0.224, 0.225]
 TRAIN:
-    EPOCHS: 120
+    EPOCHS: 60
     BATCH_SIZE: 32
     CROP_SIZE: 256
     BASE_SIZE: 256
     SUPERVISE_SIZE: 256
-    BACKBONE_PRETRAINED_PATH: "pretrain/v100_gpu64_6ms.pth"
+    BACKBONE_PRETRAINED_PATH: "pretrain/flops_595m.pth"
 TEST:
     BATCH_SIZE: 32
     SCALES: [0.75, 1.0, 1.25]
@@ -19,7 +19,7 @@ SOLVER:
     AUX: True
 
 MODEL:
-    MODEL_NAME: "DeepLabV3_Plus_V2_Nearest"
-    BACKBONE: "ofa_v100_gpu64_6ms"
+    MODEL_NAME: "DeepLabV3_Plus_V2"
+    BACKBONE: "ofa_flops_595m"
     OUTPUT_STRIDE: 8
 
