--- a/SegmenTron/configs/0002_dunet_resnext101.yaml
+++ b/SegmenTron/configs/0002_dunet_resnext101.yaml
@@ -3,14 +3,14 @@ DATASET:
     MEAN: [0.485, 0.456, 0.406]
     STD: [0.229, 0.224, 0.225]
 TRAIN:
-    EPOCHS: 60
-    BATCH_SIZE: 8
+    EPOCHS: 120
+    BATCH_SIZE: 32
     CROP_SIZE: 256
     BASE_SIZE: 256
-    SUPERVISE_SIZE: 640
-    BACKBONE_PRETRAINED_PATH: "pretrain/resnet50-19c8e357.pth"
+    SUPERVISE_SIZE: 256
+    BACKBONE_PRETRAINED_PATH: "pretrain/resnext101_32x8d-8ba56ff5.pth"
 TEST:
-    BATCH_SIZE: 4
+    BATCH_SIZE: 32
     SCALES: [0.75, 1.0, 1.25]
 
 SOLVER:
@@ -20,7 +20,7 @@ SOLVER:
     AUX: True
 
 MODEL:
-    MODEL_NAME: "DeepLabV3_Plus_V2"
-    BACKBONE: "ibn_resnet50"
+    MODEL_NAME: "DUNetV2Nearest"
+    BACKBONE: "resnext101_32x8d"
     OUTPUT_STRIDE: 8
 
